--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <section id="back-me" class="clearfix">
             <div class="text">
                 <h2>About Me</h2>
-                    <a href="www.linkedin.com/in/richard-nulanz-5a6045139" target="blank">
+                    <a href="https://www.linkedin.com/uas/login" target="blank">
                     <img src="images/1Y1A7903.jpg">
                     </a>
                         <p id="me"> Experienced Project Manager seeks to utilize knowledge of budgeting, problem solving, communication and people skills to advance career. 
